# docs/apiDefinition.yaml
@@ -19,6 +19,11 @@ paths:
         Retrieve the list of existing restaurants
       tags:
         - RESTAURANTS
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       responses:
         '200':
           description: Partial Content
@@ -27,9 +32,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RestaurantModel'
-        '400':
-          $ref: '#/components/responses/bad_request_response'       
+                  $ref: '#/components/schemas/RestaurantModel'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'   
         default:
           $ref: '#/components/responses/server_error_response'
     post:
@@ -37,6 +44,10 @@ paths:
         - RESTAURANTS
       summary: Create restaurant
       description: Create a new restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
       requestBody:
         description: The information of the restaurant.
         content:
@@ -52,7 +63,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestaurantModel'
         '400':
-          $ref: '#/components/responses/bad_request_response'       
+          $ref: '#/components/responses/bad_request_response'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'     
         default:
           $ref: '#/components/responses/server_error_response'
   /restaurants/{restaurantId}:
@@ -61,6 +76,11 @@ paths:
         - RESTAURANTS
       summary: Get restaurant
       description: Get restaurant by Id
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -79,6 +99,10 @@ paths:
                 $ref: '#/components/schemas/RestaurantModel'
         '400':
           $ref: '#/components/responses/bad_request_response'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'     
         default:
@@ -87,6 +111,10 @@ paths:
       summary: Delete restaurant
       description: >
         Delete a restaurant given its identifier
+      security:
+        - OAuth2:
+            - admin
+            - owner
       tags:
         - RESTAURANTS
       parameters:
@@ -102,7 +130,11 @@ paths:
         '204':
           description: Success
         '400':
-          $ref: '#/components/responses/bad_request_response'       
+          $ref: '#/components/responses/bad_request_response' 
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'      
         '404':
           $ref: '#/components/responses/not_found_response'
         default:
@@ -113,6 +145,11 @@ paths:
         - REVIEWS
       summary: Get reviews
       description: Get a list of reviews for a restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -132,7 +169,11 @@ paths:
                 items:
                   $ref: '#/components/schemas/ReviewModel'
         '400':
-          $ref: '#/components/responses/bad_request_response'  
+          $ref: '#/components/responses/bad_request_response' 
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response' 
         '404':
           $ref: '#/components/responses/not_found_response'          
         default:
@@ -142,6 +183,10 @@ paths:
         - REVIEWS
       summary: Create review
       description: Create a restaurant review
+      security:
+        - OAuth2:
+            - admin
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -167,6 +212,10 @@ paths:
                 $ref: '#/components/schemas/ReviewModel'
         '400':
           $ref: '#/components/responses/bad_request_response'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'          
         default:
@@ -177,6 +226,11 @@ paths:
         - REVIEWS
       summary: Get restaurant review
       description: Get restaurant review by Id
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -203,6 +257,10 @@ paths:
                 $ref: '#/components/schemas/ReviewModel'
         '400':
           $ref: '#/components/responses/bad_request_response'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'     
         default:
@@ -212,6 +270,10 @@ paths:
         - REVIEWS
       summary: Update restaurant review
       description: Update restaurant review by Id
+      security:
+        - OAuth2:
+            - admin
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -245,6 +307,10 @@ paths:
                 $ref: '#/components/schemas/ReviewModel'
         '400':
           $ref: '#/components/responses/bad_request_response'  
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'     
         default:
@@ -255,6 +321,11 @@ paths:
         - BOOKINGS
       summary: Get bookings of the restaurant
       description: Get booking list for the restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -275,6 +346,10 @@ paths:
                   $ref: '#/components/schemas/BookingModel'
         '400':
           $ref: '#/components/responses/bad_request_response'   
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'         
         default:
@@ -284,6 +359,11 @@ paths:
         - BOOKINGS
       summary: Create booking
       description: Create a new booking for the restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -308,7 +388,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/BookingModel'
         '400':
-          $ref: '#/components/responses/bad_request_response'  
+          $ref: '#/components/responses/bad_request_response' 
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response' 
         '404':
           $ref: '#/components/responses/not_found_response'          
         default:
@@ -319,6 +403,11 @@ paths:
         - BOOKINGS
       summary: Get booking by id
       description: Get a booking by identifier for the restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -345,6 +434,10 @@ paths:
                   $ref: '#/components/schemas/BookingModel'
         '400':
           $ref: '#/components/responses/bad_request_response'
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'            
         default:
@@ -353,6 +446,11 @@ paths:
       summary: Delete restaurant booking
       description: >
         Delete a restaurant booking given its identifier
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       tags:
         - BOOKINGS
       parameters:
@@ -376,7 +474,11 @@ paths:
         '204':
           description: Success
         '400':
-          $ref: '#/components/responses/bad_request_response'       
+          $ref: '#/components/responses/bad_request_response'   
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'    
         '404':
           $ref: '#/components/responses/not_found_response'
         default:
@@ -387,6 +489,11 @@ paths:
         - MENUS
       summary: Get menus of the restaurant
       description: Get menus list for the restaurant
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -407,6 +514,10 @@ paths:
                   $ref: '#/components/schemas/SummaryMenuModel'
         '400':
           $ref: '#/components/responses/bad_request_response' 
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response'
         '404':
           $ref: '#/components/responses/not_found_response'           
         default:
@@ -415,8 +526,13 @@ paths:
     get:
       tags:
         - MENUS
-      summary: Get menus of the restaurant
-      description: Get menus list for the restaurant
+      summary: Get a menu of the restaurant
+      description: Get a menu of the restaurant by id
+      security:
+        - OAuth2:
+            - admin
+            - owner
+            - customer
       parameters:
         - name: restaurantId
           in: path
@@ -443,6 +559,10 @@ paths:
                   $ref: '#/components/schemas/MenuModel'
         '400':
           $ref: '#/components/responses/bad_request_response' 
+        '401':
+          $ref: '#/components/responses/unauthorized_error_response' 
+        '403':
+          $ref: '#/components/responses/forbidden_error_response' 
         '404':
           $ref: '#/components/responses/not_found_response'           
         default:
@@ -811,8 +931,37 @@ components:
             code: SERVER_ERROR
             message:  Internal Server Error. We're sorry. Something went wrong on the server
             severity: 'critical'
-              
-  securitySchemes:
-    BasicAuth:
-      type: http
-      scheme: basic
+    unauthorized_error_response:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/error_response'
+          example:
+            code: UNAUTHORIZED
+            message:  Not authorized.
+            severity: 'critical'
+    forbidden_error_response:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/error_response'
+          example:
+            code: FORBIDDEN
+            message:  Forbidden access to the resource
+            severity: 'critical'
+  securitySchemes:             
+    OpenID:
+        type: openIdConnect
+        openIdConnectUrl: https://example.com/.well-known/openid-configuration
+    OAuth2:
+        type: oauth2
+        flows:
+          authorizationCode:
+            authorizationUrl: https://example.com/oauth/authorize
+            tokenUrl: https://example.com/oauth/token
+            scopes:
+              admin: Grants access to all operations
+              owner: Grants access to owner operations
+              customer: Grants access customer operations
